# UrbanVerse

./: .gitignore  LICENSE  README.md
scripts/: upgrade_isaacsim5.md  upgrade_scene_for_isaacsim5.py  upgrade_scene_for_isaacsim5.sh  upgrade_scenes_batch.sh
urbanverse_100k/: LICENSE  README.md  demo_usage.ipynb  pyproject.toml  requirements.txt
urbanverse_100k/urbanverse_asset/: __init__.py  _core.py  _filter.py  _glb_to_usd.py  _material.py  _usd_to_glb.py  _vegetation.py  object.py  plant.py  road.py  shrub.py  sidewalk.py  sky.py  terrain.py  tree.py  viewer.py
urbanverse_100k/urbanverse_asset/_viewer/: asset_viewer.html  material_grid.html  mdl_material_viewer.html  sky_viewer.html
